# rust-sample-api

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/api/: mod.rs
src/config/: mod.rs
src/db/: init_pg.rs  mod.rs  user_pg.rs
src/domain/: user.rs
src/errors/: mod.rs
src/services/: user.rs
