[package]
name = "rust-proj-sample"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
axum = { version = "0.8.4", features = ["tokio", "http1"] }
tokio = "1.45.1"
config = "0.15.11"
serde = "1.0.219"
hyper = "1.6.0"
uuid = "1.17.0"
thiserror = "2.0.12"
